--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <div class="journey-icon">
               <i class="bi bi-briefcase-fill"></i>
             </div>
-            <h4 class="journey-title">Intern Developer</h4>
+            <h4 class="journey-title">Intern Software Engineer</h4>
             <p class="journey-desc">Started internship at CodeScale Pvt Ltd</p>
           </div>
         </div>
@@ -394,7 +394,7 @@
             <div class="journey-icon">
               <i class="bi bi-arrow-up-circle-fill"></i>
             </div>
-            <h4 class="journey-title">Associate Engineer</h4>
+            <h4 class="journey-title">Associate Software Engineer</h4>
             <p class="journey-desc">Promoted to full-time at CodeScale</p>
           </div>
         </div>
@@ -404,7 +404,7 @@
             <div class="journey-icon">
               <i class="bi bi-graph-up-arrow"></i>
             </div>
-            <h4 class="journey-title">Growing Developer</h4>
+            <h4 class="journey-title">Growing Software Engineer</h4>
             <p class="journey-desc">Building scalable cloud solutions</p>
           </div>
         </div>
