--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
         
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html" class="active">Services</a></li>
-          <li><a href="portfolio.html">Projects</a></li>
+          <li><a href="projects.html">Projects</a></li>
           
           <li><a href="contact.html">Contact</a></li>
         </ul>
