--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
       href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+    <!-- <link href="assets/vendor/aos/aos.css" rel="stylesheet" /> -->
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <link
       href="assets/vendor/glightbox/css/glightbox.min.css"
@@ -154,96 +154,7 @@
               <!-- End Education Section -->
 
               <!-- Professional Skills Section -->
-              <div class="resume-item skills-animation" data-aos="fade-up">
-                <h3 class="resume-title">Technical Skills</h3>
-
-                <div class="resume-content">
-                  <div class="skill-item">
-                    <h4>Backend Development</h4>
-                    <div class="progress">
-                      <div
-                        class="progress-bar"
-                        role="progressbar"
-                        aria-valuenow="90"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                      ></div>
-                    </div>
-                    <p>
-                      <strong>Technologies:</strong> Node.js, Express.js, AWS
-                      Lambda, Spring Boot, .NET
-                    </p>
-                  </div>
-
-                  <div class="skill-item">
-                    <h4>Cloud Computing</h4>
-                    <div class="progress">
-                      <div
-                        class="progress-bar"
-                        role="progressbar"
-                        aria-valuenow="85"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                      ></div>
-                    </div>
-                    <p>
-                      <strong>Technologies:</strong> AWS (EC2, S3, API Gateway,
-                      Lambda), Docker, Kubernetes
-                    </p>
-                  </div>
-
-                  <div class="skill-item">
-                    <h4>Frontend Development</h4>
-                    <div class="progress">
-                      <div
-                        class="progress-bar"
-                        role="progressbar"
-                        aria-valuenow="80"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                      ></div>
-                    </div>
-                    <p>
-                      <strong>Technologies:</strong> React.js, JavaScript,
-                      TypeScript, HTML/CSS
-                    </p>
-                  </div>
-
-                  <div class="skill-item">
-                    <h4>Database Management</h4>
-                    <div class="progress">
-                      <div
-                        class="progress-bar"
-                        role="progressbar"
-                        aria-valuenow="85"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                      ></div>
-                    </div>
-                    <p>
-                      <strong>Technologies:</strong> MongoDB, Firebase,
-                      DynamoDB, SQL
-                    </p>
-                  </div>
-
-                  <div class="skill-item">
-                    <h4>Mobile Development</h4>
-                    <div class="progress">
-                      <div
-                        class="progress-bar"
-                        role="progressbar"
-                        aria-valuenow="75"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                      ></div>
-                    </div>
-                    <p>
-                      <strong>Technologies:</strong> Java, Android Studio,
-                      Firebase
-                    </p>
-                  </div>
-                </div>
-              </div>
+              
               <!-- End Professional Skills Section -->
             </div>
 
